<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="title_messages">Messages</string>
    <string name="title_keypad">Keypad</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>

    <string name="empty_contact_list">No contacts found !</string>
    <string name="title_update_contact">Update contact</string>
    <string name="update_button">Update</string>

    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_add_contact">Add contact</string>
    <string name="text_edit_contact">Edit contact</string>
    <string name="text_delete_contact">Delete contact</string>
    <string name="text_call_contact">Call contact</string>
    <string name="text_send_message">Send message</string>
    <string name="text_add">Add</string>
    <string name="text_address">Address</string>
    <string name="text_zip_code">Zip Code</string>
    <string name="text_city">City</string>
    <string name="text_email">Email</string>
    <string name="text_contact_picture_description">Contact picture</string>
    <string name="text_theme">Theme</string>
    <string name="text_contact_name">Contact name</string>
    <string name="text_save">save</string>
    <string name="text_contact">Contact</string>
    <string name="text_edit">Edit</string>
    <string name="add_conversation_text">Add conversation</string>
    <string name="text_last_message">last message</string>
    <string name="delete_contact_button_text">delete contact</string>s
    <string name="edit_contact_button_text">Edit contact</string>
    <string name="contact_image_description">contact image</string>
    <string name="address_icon_text">address icon</string>
    <string name="delete_contact_confirmation">Delete contact ?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="send_text">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="go_to_conversation_text">Go to conversation</string>
    <string name="call_contact">Call contact</string>

</resources>