<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_messages">

    <fragment
        android:id="@+id/navigation_keypad"
        android:name="com.example.ft_hangouts.ui.keypad.KeypadFragment"
        android:label="@string/title_keypad"
        tools:layout="@layout/fragment_keypad" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.ft_hangouts.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" >
    </fragment>

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.ft_hangouts.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <activity
        android:id="@+id/addContactActivity"
        android:name="com.example.ft_hangouts.ui.addContact.AddContactActivity"
        android:label="@string/text_add_contact"
        tools:layout="@layout/activity_add_contact" />

    <activity
        android:id="@+id/settingsActivity"
        android:name="com.example.ft_hangouts.ui.settings.SettingsActivity"
        android:label="@string/title_settings"
        tools:layout="@layout/activity_settings"/>

    <activity
        android:id="@+id/contactPageActivity"
        android:name="com.example.ft_hangouts.ui.contactPage.ContactPageActivity"
        android:label="@string/text_contact"
        tools:layout="@layout/activity_contact_page" />

</navigation>